syntax = "proto3";

package hooks;

message Pop {
   string id = 1;
}

message Change {

   Kind kind = 1;

   string bucket = 2;

   string documentKey = 3;

   string previous = 4;
   
   string current = 5;

   enum Kind {
      INSERT = 0;
      UPDATE = 1;
      DELETE = 3;
   }
}

service ChangeQueue {
   rpc pop(Pop) returns (Change);
}
